config/wordpress-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  namespace: wp
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress      
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
        app: wordpress
        tier: frontend
    spec:
      serviceAccountName: wp-deployment-sa
      containers:
      - image: 000000000000.dkr.ecr.us-east-1.amazonaws.com/wordpress-blogs:latest
        name: wordpress        
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets"
            readOnly: true
          - name: persistent-storage
            mountPath: "/var/www/html"
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: wordpress-deployment-spc
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: ebs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: service-wp
  namespace: wp
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: wordpress
    app: wordpress
    tier: frontend
  type: NodePort
---
